# SvelteBoilerplateApplication

./: .credo.exs  .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  compose.sh  deploy-cli.sh  docker-compose.yml  docker_entrypoint.sh  docker_entrypoint_dev.sh  mix.exs  pdftk  shell.nix
.github/workflows/: main.yml  prettier.yml
assets/: package-lock.json  package.json  webpack.config.js
assets/css/: app.scss  ironforge.scss  stormwind.scss  styles.css
assets/js/: app.js  bpstripe.js  burgers.js  constants.js  dashboardhacks.js  heicConverter.js  iac.js  ironforge.js  localStorageStore.js  modals.js  nextEventData.js  notifications.js  paperCups.js  pdfrenderer.js  store.js  stormwind.js  tablinks.js  webChannels.js
assets/patches/: print-js+1.6.0.patch
assets/test/: date.test.js  (+1 more)
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  runtime.exs  test.exs
lib/: boilerplate.ex  boilerplate_web.ex
nix/: default.nix  sources.json
nomad/: Boilerplate-RootCA.crt  boilerplate-app.nomad  boilerplate-eng.nomad  boilerplate.nomad
test/: test_helper.exs
tools/: bprettier.sh  concat_files.sh  concat_pdf.sh  convert_to_pdf.sh  gen_api_key.py  generate_coverage.sh  get_git_status.sh  mitm-boilerplate-api-key.py  upload_rollbar.sh
tools/iac/: audit_log.html  mask_sample.json  pyproject.toml
tools/iac/boilerplate_tools_iac/: acroform_to_mask.py  data_extractor.py  mask_visualizer.py
tools/iac/filler/: appendix.html.ebs  appendixwrap.sh  audit_log.html.hbs  fillAppendix.js  fillAppendix.py  fillOut.js  fillwrap.sh  package.json
(+562 files in other folders)
