[tool.poetry]
name = "boilerplate_tools_iac"
version = "0.1.0"
description = "Boilerplate IAC Tooling Support"
authors = ["Levente Kurusa <lev@boilerplate.co>"]

[tool.poetry.dependencies]
python = ">=3.6"
pyPDF2 = "^1.26.0"
pdfrw = "^0.4"
reportlab = "3.5.57"
pillow = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
